test/handler-ips.json
{
    "apiVersion": "config.istio.io/v1alpha2",
    "kind": "handler",
    "metadata": {
        "name": "some-whitelistt"
    },
    "spec": {
        "compiledAdapter": "listchecker",
        "params": {
            "blacklist": false,
            "entryType": "IP_ADDRESSES",
            "overrides": [
                "104.199.71.226",
                "35.205.60.205"
            ]
        }
    }
}
