test/ingress.json
{
    "apiVersion": "extensions/v1beta1",
    "kind": "Ingress",
    "metadata": {
        "annotations": {
            "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"extensions/v1beta1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{},\"name\":\"test-ingress\",\"namespace\":\"test-ingress\"},\"spec\":{\"rules\":[{\"host\":\"test-ingress.public.cluster.local\"}]}}\n",
            "nginx.ingress.kubernetes.io/whitelist-source-range": "192.168.0.0/24, 192.168.5.0/24, 35.205.194.164/32, 35.233.113.241/32"
        },
        "creationTimestamp": "2018-07-13T12:38:02Z",
        "generation": 1,
        "name": "test-ingress",
        "namespace": "test-ingress",
        "resourceVersion": "25680741",
        "selfLink": "/apis/extensions/v1beta1/namespaces/test-ingress/ingresses/test-ingress",
        "uid": "94faf62c-8699-11e8-8616-42010abc0810"
    },
    "spec": {
        "rules": [
            {
                "host": "test-ingress.public.cluster.local"
            }
        ]
    },
    "status": {
        "loadBalancer": {}
    }
}
